syntax = "proto3";

option go_package = "./"; 

package splitter;

message Debt {
  string person_id = 1;
  double debt = 2; // debt > 0 means owe person_id $$$
}

message Account {
  string person_id = 1;
  repeated Debt debts = 2;
}

message SplitterRequest {
  repeated Account accounts = 1;
}

message SplitterResponse {
  enum Status {
    pending = 0;
    success = 1;
    failed = 2;
  }
  
  repeated Account accounts = 1;
  Status status = 2;
}

service SplitterService {
  rpc CalculateDebt(SplitterRequest) returns (SplitterResponse) {}
}